--- a/index1.html
+++ b/index1.html
@@ -1,1 +1,13 @@
+<style> a, html { color:white;} html { background-color:black;} </style>
+<pre>
+
+                         
+ _____ _____ _____ _____ 
+|  _  |  _  |   __|   __|
+|   __|     |  |  |   __|
+|__|  |__|__|_____|_____|
+                         
+
+ <a href="puzzle1">puzz</a> + <a href="ridd">ridd</a> = <a href="xyzz">xyzz</a>
+
 
