--- a/puzz1.html
+++ b/puzz1.html
@@ -1,4 +1,4 @@
-<Style>html { background-color:grey;}</style>
+<Style>grey { color:grey;} html { background-color:grey;}</style>
 <pre><a href="index1">ind</a>
 <center>calculator?
 
@@ -53,7 +53,7 @@
    </head> 
    <!-- create table -->
    <body> 
-      <div class = title >unscrupulous calculator</div> 
+      <div class = title >broken calculator</div> 
       <table border="1"> 
          <tr> 
             <td colspan="5"><input type="text" id="result"/></td> 
@@ -63,9 +63,9 @@
          <tr> 
             <!-- create button and assign value to each button -->
             <!-- dis("1") will call function dis to display value -->
-            <td><input type="button" value="1" onclick="dis('1')"/> </td> 
-            <td><input type="button" value="2" onclick="dis('2')"/> </td> 
-            <td><input type="button" value="3" onclick="dis('3')"/> </td> 
+            <td><input type="button" value="(2d , 3r)" onclick="dis('1')"/> </td> 
+            <td><input type="button" value="2                             " onclick="dis('2')"/> </td> 
+            <td><input type="button" value="                              3" onclick="dis('?!')"/> </td> 
             <td><input type="button" value="/" onclick="dis('/')"/> </td> 
          </tr> 
          <tr> 
@@ -78,7 +78,7 @@
             <td><input type="button" value="7" onclick="dis('7')"/> </td> 
             <td><input type="button" value="8" onclick="dis('8')"/> </td> 
             <td><input type="button" value="9" onclick="dis('9')"/> </td> 
-            <td><input type="button" value="+" onclick="dis('click the bottom right of the screen.')"/> </td> 
+            <td><input type="button" value="+" onclick="dis('click the link at the bottom of the screen.')"/> </td> 
          </tr> 
          <tr> 
             <td><input type="button" value="." onclick="dis('.')"/> </td> 
@@ -87,7 +87,17 @@
             <td><input type="button" value="=" onclick="solve()"/> </td> 
             <td><input type="button" value="*" onclick="dis('*')"/> </td> 
          </tr> 
-      </table> 
+
+
+
+
+      </table><pre>
+
+
+
+
+<a href="puzz2"><grey>this one.</grey></a>
+
 
 
 
