--- a/puzz1.html
+++ b/puzz1.html
@@ -1,5 +1,5 @@
 <Style>grey { color:grey;} html { background-color:grey;}</style>
-<pre><a href="index1">ind</a>
+<pre><a href="index">ind</a>
 <center>calculator?
 
 
