--- a/puzz1.html
+++ b/puzz1.html
@@ -1,4 +1,4 @@
-<Style>grey { color:grey;} html { background-color:grey;}</style>
+<Style>grey { text-decoration:none; color:grey;} html { background-color:grey;}</style>
 <pre><a href="index">ind</a>
 <center>calculator?
 
@@ -78,7 +78,7 @@
             <td><input type="button" value="7" onclick="dis('7')"/> </td> 
             <td><input type="button" value="8" onclick="dis('8')"/> </td> 
             <td><input type="button" value="9" onclick="dis('9')"/> </td> 
-            <td><input type="button" value="+" onclick="dis('click the link at the bottom of the screen.')"/> </td> 
+            <td><input type="button" value="+" onclick="dis(' hold CTRL and press A. ')"/> </td> 
          </tr> 
          <tr> 
             <td><input type="button" value="." onclick="dis('.')"/> </td> 
@@ -96,7 +96,8 @@
 
 
 
-<a href="puzz2"><grey>this one.</grey></a>
+<a style=
+"text-decoration:none;" href="puzz2"><grey>now, click this.</grey></a>
 
 
 
