--- a/puzz3.html
+++ b/puzz3.html
@@ -24,4 +24,4 @@ don't click blue.
 
 
 
-<font size="1px"><p style="color:#ffaf1a;" onclick="location='puzz4'">slightly less orange</p></font>
+<font size="1px"><p style="color:#ffaf1a; cursor:pointer;" onclick="location='puzz4'">slightly less orange</p></font>
