--- a/puzz3.html
+++ b/puzz3.html
@@ -1,3 +1,4 @@
+
 <style>html { background-color:orange;}</style>
 <pre><a href="index">ind</a>
 <center>puzz3</a>
@@ -17,7 +18,7 @@ don't click blue.
 
 
 
-<a style="color:cyan;" href="chrome://quit">blue</a>
+<a style="color:cyan;" href="#" onclick="self.close()">blue</a>
 
 
 
