--- a/puzz4.html
+++ b/puzz4.html
@@ -1,7 +1,7 @@
 
 <style>a {color:lime;} html { background-color:red; color:yellow;} i { color:white;} </style>
 <pre><a href="index">ind</a>
-<a href="puzz5">none of these</a>
+<a href="intermission">none of these</a>
 
 
 
