--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 |__|  |__|__|_____|_____|
                          
 
- <a href="puzz1">puzz</a> + <a href="ridd">ridd</a> = <a href="xyzz">xyzz</a>
+ <a href="puzzles/puzz1">puzz</a> + <a href="ridd">ridd</a> = <a href="xyzz">xyzz</a>
 
 
