--- a/puzzles/puzz1.html
+++ b/puzzles/puzz1.html
@@ -1,5 +1,7 @@
 <Style>grey { text-decoration:none; color:grey;} html { background-color:grey;}</style>
-<pre><a href="index">ind</a>
+<pre>
+[M]
+<a href="index">ind</a>
 <center>calculator?
 
 
