--- a/puzzles/puzz3.html
+++ b/puzzles/puzz3.html
@@ -1,6 +1,8 @@
 
 <style>html { background-color:orange;}</style>
-<pre><a href="index">ind</a>
+<pre>
+[E]
+<a href="index">ind</a>
 <center>puzz3</a>
 
 
