--- a/puzzles/puzz4.html
+++ b/puzzles/puzz4.html
@@ -1,6 +1,8 @@
 
 <style>a {color:lime;} html { background-color:red; color:yellow;} i { color:white;} </style>
-<pre><a href="index">ind</a>
+<pre>
+[E]
+<a href="index">ind</a>
 <a href="intermission">none of these</a>
 
 
