--- a/puzzles/puzz5.html
+++ b/puzzles/puzz5.html
@@ -3,6 +3,8 @@ html { background-color:grey;}
 a { color:orange; text-decoration:none;}
 </style>
 <pre>
+[Y]
+<a href="index">ind</a>
 puzzle <b><font color="green">five</font></b>.
 
 click the lucky number.
